fix(tooltip): color contrast and layout fixes

--- a/src/components/tooltip/Tooltip.scss
+++ b/src/components/tooltip/Tooltip.scss
@@ -61,7 +61,7 @@ $tooltip-offset: 4px; /* amount of space between target and tooltip arrow */
 
     .tooltip-close-button {
         position: absolute;
-        top: 10px;
+        top: 9px;
         right: 3px;
         cursor: pointer;
 
